fix: set cors allow in comit-server